@@ -1,11 +1,14 @@
 Changes in Version 0.1-8
 
+  o  Package namespaces for tcltk and GA are imported from and no longer need to
+     be attached.
+
   o  Graphics are now opened in a platform-independent way using the dev.new
      function.
 
 Changes in Version 0.1-7
-  
-  o  Replaced the deprecated sp::overlay function with sp::over.
+
+  o  Replaced the deprecated overlay function with over.
 
   o  Added citation for U.S. Geological Survey report.
 
